fixed description bug by adding an overflow scroll

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -68,6 +68,10 @@
       justify-content: center;
       align-items: center;
     }
+
+      .book-info h3:nth-of-type(2) {
+        overflow-y: auto;
+      }
   
     .book-description {
       background-color: lightgrey;
